[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyRVT"
version = "0.8.0"
authors = [{ name = "Albert Kottke", email = "albert.kottke@gmail.com" }]
description = "Random vibration theory for earthquake ground motions."
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
dependencies = [
  "numpy",
  "numba",
  "setuptools",
  "scipy",
  "pyexcel",
  "pyexcel-io",
  "pyexcel-xlsx",
]

[project.urls]
Homepage = "https://github.com/arkottke/pyrvt"
Documentation = "https://pyrvt.readthedocs.io"

[project.scripts]
pyrvt = "pyrvt.runner:main"

[tool.black]
line-length = 99
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.hatch.build.targets.sdist]
exclude = ["/*.yml", "/.*", "/.github", "/docs"]

[tool.isort]
profile = "black"
filter_files = true

[tool.ruff]
line-length = 99

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.test]
dependencies = [
  "coverage[toml]",
  "pytest",
  "pystrata",
  "pytest-cov",
  "pytest-runner",
  # FIXME: Add as dependency of pystrata
  "matplotlib",
  "pykooh",
  "tomli",
  "pandas",
  # Done
]

[tool.hatch.envs.test.scripts]
run-coverage = "pytest --cov-config=pyproject.toml --cov=pkg --cov=tests"
run-coverage-xml = "run-coverage --cov-report xml"
run = "run-coverage --no-cov"

[tool.hatch.envs.style]
detached = true
dependencies = ["black", "isort"]

[tool.hatch.envs.style.scripts]
check = ["black --check --diff .", "isort --check-only --diff ."]
fmt = ["isort .", "black .", "check"]

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs",
  "markdown-callouts",
  "mkdocstrings[python]",
  "mkdocs-bibtex",
  "mkdocs-gen-files",
  "mkdocs-literate-nav",
  "mkdocs-material",
  "mkdocs-section-index",
  "mkdocs-jupyter",
  "black",
]
[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"
