# See https://setuptools.pypa.io/en/latest/userguide/declarative_config.html

[metadata]
name = pyRVT
version = 0.6.3
url = http://github.com/arkottke/pyrvt
author = Albert Kottke
author_email= albert.kottke@gmail.com
description= Random vibration theory for earthquake ground motions.
description_file = README.rst
license = MIT

[options]
# Use src/ so that package has to be installed for testing and use
package_dir=
    =src
packages=find:
zip_safe = False
include_package_data = True
python_requires = 3.11>, >=3.7
install_requires =
    numpy
    numba
    setuptools
    scipy
tests_require =
    pystrata

[options.package_data]
pyrvt = data/*

[options.entry_points]
console_scripts =
    pyrvt = pyrvt.runner:main

# FIXME: Use pyexcel to handle everything
[options.extras_require]
xls = xlwt, xlrd
xlsx = openpyxl
all = openpyxl, xlwt, xlrd

[aliases]
test = pytest
release = clean --all sdist bdist_wheel build_sphinx upload upload_docs

[flake8]
exclude = docs/
max-line-length = 88
extend-ignore = E203

[pydocstyle]
inherit = false
convention = numpy
match = (?!test_).*\.py

[wheel]
universal = 1

[yapf]
based_on_style = pep8
spaces_around_power_operator = true
